[flake8]
exclude = .git,.env,__pycache__,.eggs
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
lines_after_imports=2

[tool:pytest]
addopts= --cov=async_timeout --cov-report=term --cov-report=html --cov-branch

[metadata]
license_file = LICENSE

[mypy-pytest]
ignore_missing_imports = true

[mypy]
python_version = 3.6
warn_unused_ignores = True
warn_redundant_casts = True
warn_no_return = True
strict_optional = True
show_traceback = True
show_column_numbers = True
no_implicit_optional = True
disallow_incomplete_defs = True
disallow_any_generics = True
ignore_missing_imports = True
