[metadata]
name = async-timeout
version = attr: async_timeout.__version__
url = https://github.com/aio-libs/async-timeout
project_urls =
  Chat: Gitter = https://gitter.im/aio-libs/Lobby
  CI: GitHub Actions = https://github.com/aio-libs/async-timeout/actions
  Coverage: codecov = https://codecov.io/github/aio-libs/async-timeout
  GitHub: issues = https://github.com/aio-libs/async-timeout/issues
  GitHub: repo = https://github.com/aio-libs/async-timeout
description = Timeout context manager for asyncio programs
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Andrew Svetlov <andrew.svetlov@gmail.com>
author_email = andrew.svetlov@gmail.com
license = Apache 2
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Topic :: Software Development :: Libraries
  Framework :: AsyncIO

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.8
packages =
  async_timeout
zip_safe = True
include_package_data = True

[flake8]
exclude = .git,.env,__pycache__,.eggs
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
lines_after_imports=2

[tool:pytest]
addopts= --cov=async_timeout --cov-report=term --cov-report=html --cov-branch
asyncio_mode = strict

[mypy-pytest]
ignore_missing_imports = true
